force-app/main/default/objects/ScheduleAdvanceInvoiceHistory__c/ScheduleAdvanceInvoiceHistory__c.object-meta.xml
<CustomObject>
    <label>Schedule Advance Invoice History</label>
    <nameField>
        <displayFormat>SH-{0}</displayFormat>
        <label>Schedule Advance Invoice History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Advance Invoice History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>