force-app/main/default/objects/ScheduleAdvanceInvoiceHistory__c/fields/IsFortnightly__c.field-meta.xml
<CustomField>
    <fullName>IsFortnightly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fortnightly?</label>
    <type>Checkbox</type>
</CustomField>