force-app/main/default/objects/ScheduleAdvanceInvoiceHistory__c/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New?</label>
    <type>Checkbox</type>
</CustomField>