force-app/main/default/objects/ScheduleAdvanceInvoiceHistory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schedule Advance Invoice History</relationshipLabel>
    <relationshipName>ScheduleAdvanceInvoiceHistory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>