force-app/main/default/objects/ScheduleAdvanceInvoiceHistory__c/fields/ReactivationStartDate__c.field-meta.xml
<CustomField>
    <fullName>ReactivationStartDate__c</fullName>
    <label>Reactivation Start Date</label>
    <type>Date</type>
</CustomField>