force-app/main/default/objects/ScheduleAdvanceInvoiceHistory__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Schedule Advance Invoice History</relationshipLabel>
    <relationshipName>ScheduleAdvanceInvoiceHistory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>