force-app/main/default/objects/ScheduleAdvanceInvoiceHistory__c/fields/SuspensionStartDate__c.field-meta.xml
<CustomField>
    <fullName>SuspensionStartDate__c</fullName>
    <label>Suspension Start Date</label>
    <type>Date</type>
</CustomField>